Fixed today grid layout bug

--- a/src/styles/today.css
+++ b/src/styles/today.css
@@ -279,13 +279,14 @@
     .today-analysis-data .analysis-list{
         margin-left: 0;
         margin-right: 0;
-        column-count: 1;
+        grid-template-columns: auto;
     }
 
     .today-analysis-data .analysis-list .analysis-item{
         margin: 20px 0 0;
         max-width: 100%;
         min-width: 100%;
+        overflow-y: hidden;
         height: 120vw;
         transition: all 200ms ease;
     }
